--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -15,13 +15,17 @@ jobs:
 
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - name: Install dependencies
+        working-directory: Video-Summariser-App/frontend
         run: dart pub get
 
       - name: Verify formatting
+        working-directory: Video-Summariser-App/frontend
         run: dart format --output=none --set-exit-if-changed .
 
       - name: Analyze project source
+        working-directory: Video-Summariser-App/frontend
         run: dart analyze
 
       - name: Run tests
+        working-directory: Video-Summariser-App/frontend
         run: flutter test
