--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - name: Install dependencies
-        working-directory: Video-Summariser-App/frontend
+        working-directory: frontend
         run: dart pub get
 
       - name: Verify formatting
