--- a/.github/workflows/backend-CI.yml
+++ b/.github/workflows/backend-CI.yml
@@ -29,6 +29,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Test with pytest
-      working-directory: backend/tests
+      env: 
+        PYTHONPATH: backend
       run: |
+        cd backend/tests
         pytest integration_testing unit_testing
